--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
 	<Script>
 	var mymap= L.map('map').setView([51.505, -0.09], 13);
 
-	var Stamen_Toner = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.{ext}', {
+	var Stamen_Toner = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.png', {
 	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
-	subdomains: 'abcd',
 	minZoom: 0,
 	maxZoom: 20,
-	ext: 'png'
 });
-	
+
 map.addLayer(Stamen_Toner);
 
 </Script>
