--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 	<Script>
 	var map=L.map('map')
 	.setView([49, -123],8);
-		
+
 	L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.png', {
 	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
 	minZoom: 0,
 	maxZoom: 20,
-});.addTo(map);
+}).addTo(map);
 
 </Script>
 
