--- a/index.html
+++ b/index.html
@@ -24,13 +24,24 @@
 
 	<Script>
 	var map=L.map('map')
-	.setView([49, -123],8);
+	.setView([49, -123],4);
 
 	L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.png', {
 	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
 	minZoom: 0,
 	maxZoom: 20,
-}).addTo(map);
+	}).addTo(map);
+
+	//Source: https://skytruth-org.carto.com/tables/epa_superfund_sites/public
+	$.getJSON("superfund.geojson",function(data){
+		var datalayer= L.geoJson(data , {
+		onEachFeature:function(feature, featureLayer) {
+			featureLayer.bindPopup(feature.properties.sitename);
+		}
+	
+	});
+
+
 
 </Script>
 
