--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 	}).addTo(map);
 
 	//Source: https://skytruth-org.carto.com/tables/epa_superfund_sites/public
-	$.getJSON("superfund.geojson",function(data){
-		var datalayer= L.geoJson(data ,{
-		L.geoJson(data).addTo(map);
-	}).addTo(map);
-	});
+	//$.getJSON("superfund.geojson",function(data){
+	//	var datalayer= L.geoJson(data ,{
+//		L.geoJson(data).addTo(map);
+//	}).addTo(map);
+//	});
 
 
 
