--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	}).addTo(map);
 
 	//Source: https://skytruth-org.carto.com/tables/epa_superfund_sites/public
-	.getJSON("superfund.geojson",function(data){
+	$.getJSON("superfund.geojson",function(data){
 		var datalayer= L.geoJson(data ,{
 			onEachFeature: function(feature, featureLayer) {
 				featureLayer.bindPopup(feature.properties.sitename);
