--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
-
+   <script src="http://code.jquery.com/jquery-1.11.0.min.js">
+   </script>
     <style>
     	#map {height: 80vh; background-color: grey;}
     </style>
