--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
-   <script src="http://code.jquery.com/jquery-1.11.0.min.js">
-   </script>
+  
     <style>
     	#map {height: 80vh; background-color: grey;}
     </style>
@@ -24,14 +23,17 @@
 
 
 	<Script>
-	var map=L.map('map')
-	.setView([39, -95],3);
-
-	L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.png', {
+    var Stamen=L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.png', {
 	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
 	minZoom: 0,
 	maxZoom: 20,
-	}).addTo(map);
+    });
+
+	var map = new L.map("map", {
+		center:new L.LatLng(39, -95),
+		zoom: 3
+	});
+    map.addLayer(Stamen);
 
 	//Source: https://skytruth-org.carto.com/tables/epa_superfund_sites/public
 	$.getJSON("superfund.geojson",function(data){
