--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     //Import the GeoJson data and add to map
 	//Source: https://skytruth-org.carto.com/tables/epa_superfund_sites/public
-	$.getJSON("superfundWa.geojson",function(data){
+	$.getJSON("superfundWA.geojson",function(data){
 
 		var datalayer= L.geoJson(data ,{
 			onEachFeature: function(feature, featureLayer) {
