--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	//$.getJSON("superfundWA.geojson",function(data){
 
 	//	var datalayer= L.geoJson(data ,{
-			onEachFeature: function(feature, featureLayer) {
+	//		onEachFeature: function(feature, featureLayer) {
 	//			featureLayer.bindPopup(feature.properties.sitename);
 	//		},
 	//	}).addTo(map);
