--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				else if (NAME >10 ) fillColor= "#35978f";
 				else if (NAME >5 ) fillColor= "#01665e";
 				else if (NAME >0 ) fillColor= "#003c30";
-				return	{color: "#999", weight: 1, fillColor:fillColorm fillOpacity: .5};
+				return	{color: "#999", weight: 1, fillColor:fillColor, fillOpacity: .5};
 			},
 			onEachFeature:function (feature, layer) {
 				layer.bindPopup(feature.property.NAME)}
