--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	//$.getJSON("censusWA.geojson",function(data){
 //	var datalayer= L.geoJson(data ,{
 	//		style:function(feature){
-				var fillColor,
+//				var fillColor,
 //
 //			}
 	//		onEachFeature: function(feature, featureLayer) {
