--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<!--This is the CSS and JavaScript libraries-->
-	<script src="jquery-2.1.1.min.js"></script> 
-
+    <script src="./Leaflet.markercluster-1.0.5/leaflet.markercluster.js"></script> 
+     <script src="./Leaflet.markercluster-1.0.5/leaflet.markercluster.js"></script> 	
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
    crossorigin=""/>
@@ -11,7 +11,7 @@
    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
-
+   <script src="jquery-2.1.1.min.js"></script> 
     <style>
     	#map {height: 80vh; background-color: grey;}
     </style>
@@ -48,12 +48,16 @@
         	
         });
 
-		L.geoJson(data ,{
+		var superfund= L.geoJson(data ,{
 			pointToLayer: function(feature,latlng){
 				var marker= L.marker(latlng, {icon: skullIcon});marker.bindPopup(feature.properties.sitename + '<br/>' + feature.properties.streetaddress + '<br/>' + feature.properties.nationalprioritiesliststatus);
 				return marker;
 			}
-		}).addTo(map); 
+		});
+		var clusters= L.markerClusterGroup();
+		clusters.addLayer(superfund);
+		map.addLayer(clusters);
+
 			//onEachFeature: function(feature, featureLayer) {
 			//	featureLayer.bindPopup(feature.properties.sitename);
 			//},
