--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
 	<!--This is the CSS and JavaScript libraries-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+     <link rel="stylesheet" href="./Leaflet.markercluster-1.0.5/MarkerCluster.css"/> 
     <script src="./Leaflet.markercluster-1.0.5/leaflet.markercluster.js"></script> 
-     <script src="./Leaflet.markercluster-1.0.5/leaflet.markercluster.js"></script> 	
-	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+   	
+	 
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
    crossorigin=""/>
 
    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
+   <script src="./Leaflet-1.0.3/leaflet.js"></script>
    <script src="jquery-2.1.1.min.js"></script> 
     <style>
     	#map {height: 80vh; background-color: grey;}
@@ -57,12 +60,6 @@
 		var clusters= L.markerClusterGroup();
 		clusters.addLayer(superfund);
 		map.addLayer(clusters);
-
-			//onEachFeature: function(feature, featureLayer) {
-			//	featureLayer.bindPopup(feature.properties.sitename);
-			//},
-		//}).addTo(map);
-
 });
 //Source: https://www.census.gov/geo/maps-data/data/cbf/cbf_sld.html
 //converted via mapshaper to GEOJSON
