--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<!--This is the CSS library for Leaflet-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"/>
     <!--The is the CSS for the marker Cluster plug in-->
-    <link rel="stylesheet" href="./Leaflet.markercluster-1.0.5/MarkerCluster.css"/> 
+    <link rel="stylesheet" href="MarkerCluster.css"/> 
     <!--The is the JS for the marker Cluster plug in-->
-    <script src="./Leaflet.markercluster-1.0.5/leaflet.markercluster.js"></script> 
-    <!--The is the js for Leafley-->
+    <script src="leaflet.markercluster.js"></script> 
+    <!--The is the js for Leaflet-->
 
    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
@@ -15,6 +15,7 @@
    <script src="./Leaflet-1.0.3/leaflet.js"></script>
    <!--The is the JS to make Jquery work for #getJSON-->
    <script src="jquery-2.1.1.min.js"></script> 
+
     <style>
     	#map {height: 80vh; background-color: grey;}
     </style>
