--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
    crossorigin=""/>
-    <!--The is the CSS for the marker Cluster plug in-->
-    <link rel="stylesheet" href="MarkerCluster.css"/> 
-    <!--The is the JS for the marker Cluster plug in-->
-    <script src="leaflet.markercluster.js"></script> 
-    <!--The is the js for Leaflet-->
+   <!--The is the js for Leaflet-->
 
    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-   crossorigin=""></script>
+   crossorigin=""></script> 
+   <!--The is the CSS  and JS for the marker Cluster plug in-->
+		 <link rel="stylesheet" href="Leaflet.markercluster-1.4.1/dist/MarkerCluster.css"/>
+		 <link rel="stylesheet" href="Leaflet.markercluster-1.4.1/dist/MarkerCluster.Default.css"/>
+		 <script src="Leaflet.markercluster-1.4.1/dist/leaflet.markercluster-src.js"></script>
+    
   
    <!--The is the JS to make Jquery work for #getJSON-->
    <script src="jquery-2.1.1.min.js"></script> 
