--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				return marker;
 			}
 		});
-		var cluster= L.markerClusterGroup();
+		var clusters= L.markerClusterGroup();
 		clusters.addLayer(superfund);
 		map.addLayer(clusters);
 });
