--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 	});
     map.addLayer(Stamen);
 
+    function style {
+    	return {
+    		fillOpacity: 50
+    		color: 'red'
+    	};
+    }
+
     //Import the GeoJson data with Superfund sites and add to map
 	//Source: https://skytruth-org.carto.com/tables/epa_superfund_sites/public
 	$.getJSON("superfundWA.geojson",function(data){
@@ -68,15 +75,11 @@
 //Source: https://www.census.gov/geo/maps-data/data/cbf/cbf_sld.html
 //converted via mapshaper to GEOJSON
 	$.getJSON("map.geojson",function(data){
-		var polystyle= {
-			"color": "red",
-			"opacity": 0.4
-		};
 		var datalayer= L.geoJson(data ,{
-			style: polystyle
 			onEachFeature: function(feature, featureLayer) {
 				featureLayer.bindPopup(feature.properties.District_N+ '<br/>' + feature.properties.REP + '<br/>' + feature.properties.PHONE);
 			},
+			style: style
 		}).addTo(map);
 });
 
