--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	});
     map.addLayer(Stamen);
 
-    function style {
+    function style(feature) {
     	return {
     		fillOpacity: 50
     		color: 'red'
