--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	</title>
 </head>
 <body>
+
+
+
 	<div id= "map"> </div>
 
 
@@ -48,8 +51,8 @@
 
     function style(feature) {
     	return {
-    		fillOpacity: 50
-    		color: '#FF0000'
+    		fillOpacity: 50;
+    		color: '#FF0000';
     	};
     }
 
