--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     function style(feature) {
     	return {
-    		fillOpacity: 50;
+    		fillOpacity: 50
     		color: '#FF0000';
     	};
     }
