--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
 		L.geoJson(data ,{
 			style: function(feature){
 				var fillColor,
-				district= feature.properties.OBJECTID;
-				if (OBJECTID> 5) fillColor= "f03b20";
-				else if (OBJECTID > 0) fillColor= "f03b20";
-				return {color: "999", fillColor:fillColor, fillOpacity: .5};
+				return {color: "f03b20", fillColor:fillColor, fillOpacity: .5};
 			},
 			onEachFeature: function(feature, featureLayer) {
 				featureLayer.bindPopup(feature.properties.District_N+ '<br/>' + feature.properties.REP + '<br/>' + feature.properties.PHONE);
