--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 //converted via mapshaper to GEOJSON
 	$.getJSON("map.geojson",function(data){
 		L.geoJson(data ,{
-			style: function(feature){
+			style: function(){
 				var fillColor,
 				return {color: "f03b20", fillColor:fillColor, fillOpacity: .5};
 			},
