--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 	</title>
 </head>
 <body>
+	<h2> EPA Superfund Sites in Washington State </h2>
+		<p> Superfund sites are those sites areas where hazardous waste has been dumped or imporperly handled. In cases where the responsible party can be identified, the EPA can force these parties to perform or pay for the cleanup.  In cases where no party can be identified, federal funding exists for cleanups.  The NPL (National Priorities List) is an up to date list of these sites.  Sites are removed once they have been sufficiently cleaned up. </p>
+		<br>
+		<p> Click on the icons the see details about the site as well as the current NPL status.  Federal legislative districts are also mapped.  Click on the district to see the legislator and contact information if you want to contact them about the status of any of the contaminatied sites in their district.  </p>
+
 	<div id= "map"> </div>
 
 
