--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 //Source: https://www.census.gov/geo/maps-data/data/cbf/cbf_sld.html
 //converted via mapshaper to GEOJSON
 	var polystyle= {
-		"fillcolor": "#f7800",
+		"fillcolor": "#B22222",
 		"opacity": .5
 	};
 
