--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <script src="jquery-2.1.1.min.js"></script> 
 
     <style>
-    	#map {height: vh; background-color: grey;}
+    	#map {height: 70vh; background-color: grey;}
     	body {background-color: Honeydew;}
     	h1 {color: MidnightBlue;}
     	p {color: MidnightBlue;}
