--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <script src="jquery-2.1.1.min.js"></script> 
 
     <style>
-    	#map {height: 70vh; background-color: grey;}
+    	#map {height: 50%; background-color: grey;}
     	body {background-color: Honeydew;}
     	h1 {color: MidnightBlue;}
     	p {color: MidnightBlue;}
@@ -37,9 +37,11 @@
 
 	<h2> EPA Superfund Sites in Washington State </h2>
 	<hr>
-		<p> Superfund sites are those sites areas where hazardous waste has been dumped or imporperly handled. In cases where the responsible party can be identified, the EPA can force these parties to perform or pay for the cleanup.  In cases where no party can be identified, federal funding exists for cleanups.  The NPL (National Priorities List) is an up to date list of these sites.  Sites are removed once they have been sufficiently cleaned up. </p>
+		<p> Superfund sites are those areas where hazardous waste has been dumped or imporperly handled. In cases where the responsible party can be identified, the EPA can force these parties to perform or pay for the cleanup.  In cases where no party can be identified, federal funding exists for cleanups.  The NPL (National Priorities List) is an up to date list of these sites.  Sites are removed once they have been sufficiently cleaned up. </p>
 		<br>
-		<p> Click on the icons the see details about the site as well as the current NPL status.  Federal legislative districts are also mapped.  Click on the district to see the legislator and contact information if you want to contact them about the status of any of the contaminatied sites in their district.  </p>
+		<p> Each icon represents a Superfund site. Click on the icons to see details about the site as well as the current NPL status.  Federal legislative districts are also mapped. If you are conscerned about the status or pace of cleanup of any site in your district, contact you Federal Representative unsing the contact infromation in the popup. </p>
+
+		<hr>
 
 	<div id= "map"> </div>
 
