--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<hr>
 		<p> Superfund sites are those areas where hazardous waste has been dumped or imporperly handled. In cases where the responsible party can be identified, the EPA can force these parties to perform or pay for the cleanup.  In cases where no party can be identified, federal funding exists for cleanups.  The NPL (National Priorities List) is an up to date list of these sites.  Sites are removed once they have been sufficiently cleaned up. </p>
 		<br>
-		<p> Each icon represents a Superfund site. Click on the icons to see details about the site as well as the current NPL status.  Federal legislative districts are also mapped. If you are conscerned about the status or pace of cleanup of any site in your district, contact you Federal Representative unsing the contact infromation in the popup. </p>
+		<p> Each icon represents a Superfund site. Click on the icons to see details about the site as well as the current NPL status.  Federal legislative districts are also mapped. If you are conscerned about the status or pace of cleanup of any site in your district, contact you Federal Representative unsing the contact information in the popup. </p>
 
 		<hr>
 
@@ -89,11 +89,6 @@
 
 	$.getJSON("map.geojson",function(data){
 		L.geoJson(data ,{
-
-		//	style: function(feature){
-		//		var fillColor,
-		//		return {color: "999", fillColor:fillColor, //fillOpacity: .5};
-		//	},
 			onEachFeature: function(feature, featureLayer) {
 				featureLayer.bindPopup(feature.properties.District_N+ '<br/>' + feature.properties.REP + '<br/>' + feature.properties.PHONE);
 				style: polystyle
@@ -103,6 +98,8 @@
 
 
 </Script>
+
+	<hr>
 
 
 
