--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 //Source: https://www.census.gov/geo/maps-data/data/cbf/cbf_sld.html
 //converted via mapshaper to GEOJSON
 	var polystyle= {
-		"fillcolor": "#B22222",
-		"opacity": .5
+		weight: 1
+		fillcolor: "#B22222",
+		opacity: .5
 	};
 
 	$.getJSON("map.geojson",function(data){
