--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 //converted via mapshaper to GEOJSON
 	var polystyle= {
 		weight: 1
-		fillcolor: "#B22222",
+		fillcolor: "#B22222"
 		opacity: .5
 	};
 
