--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 	var polystyle= {
 		weight: 1,
 		fillcolor: "#B22222",
-		fillopacity: 1,
+		fillopacity: .6,
 		color: "#000000",
-		opacity: .5
+		opacity: .8
 	};
 
 	$.getJSON("map.geojson",function(data){
