--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 //Source: https://www.census.gov/geo/maps-data/data/cbf/cbf_sld.html
 //converted via mapshaper to GEOJSON
 	var polystyle= {
-		weight: 1,
+		weight: .7,
 		fillcolor: "#B22222",
-		fillopacity: .6,
+		fillopacity: 1,
 		color: "#000000",
 		opacity: .8
 	};
