--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 //converted via mapshaper to GEOJSON
 	var polystyle= {
 		weight: .7,
-		fillcolor: "#B22222",
+		fillcolor: "000000",
 		fillopacity: 1,
 		color: "#B22222",
 		opacity: .8
