--- a/index.html
+++ b/index.html
@@ -77,14 +77,21 @@
 
 		var superfund= L.geoJson(data ,{
 			pointToLayer: function(feature,latlng){
-				if (feature.properties.nationalprioritiesliststatus === "Currently on the Final NPL") {var marker= L.marker(latlng, {icon: skullIcon});
-				else if (feature.properties.nationalprioritiesliststatus=== "Deleted from the Final NPL") {var marker= L.marker(latlng, {icon: leafIcon});
+				if (feature.properties.nationalprioritiesliststatus === "Currently on the Final NPL") {
+					var marker= L.marker(latlng, {icon: skullIcon
+						marker.bindPopup(feature.properties.sitename + '<br/>' + feature.properties.streetaddress + '<br/>' + feature.properties.nationalprioritiesliststatus);
+						//return marker;
+					});
+				else if (feature.properties.nationalprioritiesliststatus=== "Deleted from the Final NPL") {
+					var marker= L.marker(latlng, {icon: leafIcon
+						marker.bindPopup(feature.properties.sitename + '<br/>' + feature.properties.streetaddress + '<br/>' + feature.properties.nationalprioritiesliststatus);
+						//return marker;
+					});
             }
 				
-				var marker= L.marker(latlng, {data});
 
-				marker.bindPopup(feature.properties.sitename + '<br/>' + feature.properties.streetaddress + '<br/>' + feature.properties.nationalprioritiesliststatus);
-				return marker;
+				/*marker.bindPopup(feature.properties.sitename + '<br/>' + feature.properties.streetaddress + '<br/>' + feature.properties.nationalprioritiesliststatus);
+				return marker;*/
 			}
 		});
 		var clusters= L.markerClusterGroup();
